[metadata]
name = line-ui
version = 0.0.4
author = Kent Tong
author_email = kent.tong.mo@gmail.com
description = A one-line UI for Python learners to practice event driven programming
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/freemant2000/line-ui
project_urls =
    Bug Tracker = https://github.com/freemant2000/line-ui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
