[metadata]
name = lineui
version = 0.0.4
author = Kent Tong
author_email = kent.tong.mo@gmail.com
description = A simple line UI (like that of a calculator) for Python learners to build simple yet interesting event driven apps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/freemant2000/line-ui
project_urls =
    Bug Tracker = https://github.com/freemant2000/line-ui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src    
